--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
     },
+    "target-dir": "Dozoisch/CachedBuzzBundle",
     "autoload": {
         "psr-0": {
             "Dozoisch\\CachedBuzzBundle": ""
