--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,5 @@
             "Dozoisch\\CachedBuzzBundle": ""
         }
     },
-    "target-dir": "Dozoisch/CachedBuzzBundle",
+    "target-dir": "Dozoisch/CachedBuzzBundle"
 }
