--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "kriswallsmith/buzz" : "dev-master"
+        "kriswallsmith/buzz" : ">=0.10"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
